# Exploding-Kittens

./: .gitignore  PROJECT_PLAN.md  README.md  SETUP_PLAN.md  TODO.md
.github/workflows/: cd.yml  ci.yml
client/backend/: app.py  config.py
client/backend/src/: protocol.py
client/frontend/public/: index.html  index.js  style.css
client/tests/: test_backend.py
docs/: API_SPEC.md  COMMUNICATION_PROTOCOL.md
server/: CMakeLists.txt
server/include/: game.h  network.h
server/src/: game.c  main.c  network.c
server/src/game/: CMakeLists.txt
server/src/game/src/: game.c
server/src/network/: CMakeLists.txt
server/src/network/src/: network.c
server/tests/: test_game.c  test_network.c  tests.cmake
